<resources>
    <string name="app_name">DeviantArt Browser</string>
    <string name="action_settings">Settings</string>

    <!-- Network -->
    <string name="network_connection_error">Internet connection lost, please retry again</string>

    <!-- Strings used in fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Join</string>

    <!-- Login-->
    <string name="sign_up_text_field">Don\'t have an account? Sign up!</string>
    <string name="sign_in_text_field">Already have an account? Sign in!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="deviant_art_logo_description">DeviantArt logotype</string>
    <string name="username_field_hint">Username</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="birthdate_field_hint">Date of Birth</string>
    <string name="registration_text_field">Joint Deviant Art</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile -->
    <string name="user_profile_image_description">User profile image</string>
    <string name="profile_username_text_field">Username</string>
    <string name="profile_country_text_field">Country</string>
    <string name="birthday_icon_description">Birthday icon</string>
    <string name="profile_birthday_text_string">Birthday</string>

    <string name="all_time_stats_text_field">All Time Stats</string>
    <string name="comments_made_text_field">Comments Made</string>
    <string name="watching_you_text_field">Watching You</string>
    <string name="comments_received_text_field">Comments\n Received</string>
    <string name="comments_received_counter_default_text_field">0</string>
    <string name="profile_views_text_field">Profile Views</string>
    <string name="favorites_counter_default_text_view">0</string>
    <string name="favorites_text_field">Favorites</string>
    <string name="comments_made_counter_default_text_field">0</string>
    <string name="you_watching_counter_default_text_field">0</string>
    <string name="watching_you_counter_default_text_field">0</string>
    <string name="profile_views_counter_default_text_field">0</string>
    <string name="you_watching_text_field">You Watching</string>
    <string name="logout_icon_content_description">Logout icon</string>
    <string name="bottom_menu_browse_string">Browse</string>
    <string name="bottom_menu_favorites_string">Favorites</string>
    <string name="bottom_menu_profile_string">Profile</string>

    <!-- Image -->
    <string name="back_press_image">Back press image</string>
    <string name="full_image_container">Full image container</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="like_button">Like button</string>
    <string name="add_to_favorite_button">Add to favorite button</string>
    <string name="author_name">Jone Doe</string>
    <string name="add_to_favorite_hint">Add to favorite</string>

</resources>